      from localhost.

  o Minor bugfixes (bridges):
    - Do not intermix bridge routers with controller-added routers. (Bugfix
      on 0.2.0.x)

  o Minor bugfixes (network):
    - Do not fail with an assert when accept() returns an unexpected
      address family. Addresses but does not wholly fix bug 483. (Bugfix
      on 0.2.0.x)

  o Minor bugfixes (misc):
    - Let directory authorities startup even when they can't generate
      a descriptor immediately, e.g. because they don't know their
      address.
    - Stop putting the authentication cookie in a file called "0"
      in your working directory if you don't specify anything for the
      new CookieAuthFile option. Reported by Matt Edman.
    - Make it possible to read the PROTOCOLINFO response in a way that
      conforms to our control-spec. Reported by Matt Edman.
    - Fix a minor memory leak when we fail to find enough suitable
      servers to choose a circuit. Bugfix on 0.1.2.x.
    - Stop leaking part of the descriptor when we run into a particularly
      unparseable piece of it. Bugfix on 0.1.2.x.
    - Unmap the extrainfo cache file on exit.


Changes in version 0.2.0.5-alpha - 2007-08-19
  o Removed features:
    - Version 1 directories are no longer generated in full. Instead,
      authorities generate and serve "stub" v1 directories that list
      no servers. This will stop Tor versions 0.1.0.x and earlier from
      working, but (for security reasons) nobody should be running those
      versions anyway.

  o Major bugfixes (compilation, 0.2.0.x):
    - Try to fix Win32 compilation again: improve checking for IPv6 types.
    - Try to fix MSVC compilation: build correctly on platforms that do
      not define s6_addr16 or s6_addr32.
    - Fix compile on platforms without getaddrinfo: bug found by Li-Hui
      Zhou.

  o Major bugfixes (stream expiration):
    - Expire not-yet-successful application streams in all cases if